--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -24,4 +24,7 @@ COPY --chmod=755 start-ssh-only.sh /start.sh
 
 WORKDIR /workspace
 
+RUN git clone https://github.com/comfyanonymous/ComfyUI.git
+RUN cd ComfyUI && pip install -r requirements.txt
+
 CMD [ "/start.sh" ]
