--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -25,7 +25,8 @@ COPY --chmod=755 start-ssh-only.sh /start.sh
 WORKDIR /workspace
 
 # Clone the git repo and install requirements in the same RUN command to ensure they are in the same layer
-RUN git clone https://github.com/comfyanonymous/ComfyUI.git && \
+RUN cd \ && \
+    git clone https://github.com/comfyanonymous/ComfyUI.git . && \
     cd ComfyUI && \
     pip install -r requirements.txt
 
