--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -22,13 +22,12 @@ RUN pip3 install --no-cache-dir -U torch==$PYTORCH torchvision torchaudio --extr
 
 COPY --chmod=755 start-ssh-only.sh /start.sh
 
-WORKDIR /workspace
-
 # Clone the git repo and install requirements in the same RUN command to ensure they are in the same layer
-RUN cd \ && \
-    git clone https://github.com/comfyanonymous/ComfyUI.git && \
+RUN git clone https://github.com/comfyanonymous/ComfyUI.git && \
     cd ComfyUI && \
     pip install -r requirements.txt
+
+WORKDIR /workspace
 
 ENV NVIDIA_DISABLE_REQUIRE=true
 CMD [ "/start.sh" ]
