--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -1,6 +1,7 @@
-ARG CUDA_VERSION="12.5.1"
+ARG CUDA_VERSION="12.1.1"
+ARG CUDNN_VERSION="8"
 ARG UBUNTU_VERSION="22.04"
-ARG DOCKER_FROM=nvidia/cuda:$CUDA_VERSION-cudnn-devel-ubuntu$UBUNTU_VERSION
+ARG DOCKER_FROM=nvidia/cuda:$CUDA_VERSION-cudnn$CUDNN_VERSION-devel-ubuntu$UBUNTU_VERSION
 
 # Base NVidia CUDA Ubuntu image
 FROM $DOCKER_FROM AS base
@@ -17,7 +18,7 @@ ENV PATH="/usr/local/cuda/bin:${PATH}"
 
 # Install pytorch
 ARG PYTORCH="2.4.0"
-ARG CUDA="124"
+ARG CUDA="121"
 RUN pip3 install --no-cache-dir -U torch==$PYTORCH torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu$CUDA
 
 COPY --chmod=755 start-ssh-only.sh /start.sh
@@ -25,7 +26,7 @@ COPY --chmod=755 start-ssh-only.sh /start.sh
 # Clone the git repo and install requirements in the same RUN command to ensure they are in the same layer
 RUN git clone https://github.com/comfyanonymous/ComfyUI.git && \
     cd ComfyUI && \
-    pip install -r requirements.txt
+    pip3 install -r requirements.txt
 
 WORKDIR /workspace
 
