install wget and reorder files so smallest get dowloaded first

--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -9,7 +9,7 @@ FROM $DOCKER_FROM AS base
 # Install Python plus openssh, which is our minimum set of required packages.
 RUN apt-get update -y && \
     apt-get install -y python3 python3-pip python3-venv && \
-    apt-get install -y --no-install-recommends openssh-server openssh-client git git-lfs && \
+    apt-get install -y --no-install-recommends openssh-server openssh-client git git-lfs wget && \
     python3 -m pip install --upgrade pip && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
