--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -30,7 +30,11 @@ RUN git clone https://github.com/comfyanonymous/ComfyUI.git && \
     pip3 install -r requirements.txt && \
     cd custom_nodes && \
     git clone https://github.com/ltdrdata/ComfyUI-Manager.git && \
-    git clone https://github.com/pythongosssss/ComfyUI-Custom-Scripts.git
+    git clone https://github.com/pythongosssss/ComfyUI-Custom-Scripts.git && \
+    cd /ComfyUI && \
+    mkdir pysssss-workflows
+
+COPY --chmod=755 workflow.json /ComfyUI/pysssss-workflows/workflow.json
 
 WORKDIR /workspace
 
