--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -36,6 +36,7 @@ RUN git clone https://github.com/comfyanonymous/ComfyUI.git && \
 
 COPY --chmod=755 workflow.json /ComfyUI/pysssss-workflows/workflow.json
 COPY --chmod=755 comfy.settings.json /ComfyUI/user/default/comfy.settings.json
+COPY --chmod=755 defaultGraph.js /ComfyUI/web/scripts/defaultGraph.js
 
 WORKDIR /workspace
 
