--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -35,6 +35,7 @@ RUN git clone https://github.com/comfyanonymous/ComfyUI.git && \
     mkdir pysssss-workflows
 
 COPY --chmod=755 workflow.json /ComfyUI/pysssss-workflows/txt2img.json
+COPY --chmod=755 workflow.json /ComfyUI/pysssss-workflows/img2img.json
 COPY --chmod=755 comfy.settings.json /ComfyUI/user/default/comfy.settings.json
 COPY --chmod=755 defaultGraph.js /ComfyUI/web/scripts/defaultGraph.js
 
