fix cors issues with JupyterLab

--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -89,7 +89,7 @@ COPY --chmod=755 replaceDefaultGraph.py /replaceDefaultGraph.py
 RUN python3 /replaceDefaultGraph.py
 
 # Add Jupyter Notebook
-RUN pip3 install jupyterlab jupyter_http_over_ws
+RUN pip3 install jupyterlab
 EXPOSE 8888
 
 # Add some additional custom nodes
