--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -97,6 +97,7 @@ RUN cd /ComfyUI/custom_nodes && \
     pip3 install -r requirements.txt
 
 # Add download scripts for additional models
+COPY --chmod=755 download_Controlnet.sh /download_Controlnet.sh
 COPY --chmod=755 download_fp16.sh /download_fp16.sh
 COPY --chmod=755 download_LDSR.sh /download_LDSR.sh
 COPY --chmod=755 download_SUPIR.sh /download_SUPIR.sh
