added a venv and moved start script to workspace to allow users to make changes to it.

--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -28,7 +28,7 @@ ARG PYTORCH="2.4.0"
 ARG CUDA="121"
 RUN pip3 install --no-cache-dir -U torch==$PYTORCH torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu$CUDA
 
-COPY --chmod=755 start-ssh-only.sh /start.sh
+COPY --chmod=755 start-ssh-only.sh /workspace/start.sh
 COPY --chmod=755 comfyui-on-workspace.sh /comfyui-on-workspace.sh
 
 # Clone the git repo and install requirements in the same RUN command to ensure they are in the same layer
@@ -45,6 +45,10 @@ COPY --chmod=644 workflows/ /ComfyUI/pysssss-workflows/
 COPY --chmod=644 comfy.settings.json /ComfyUI/user/default/comfy.settings.json
 
 WORKDIR /workspace
+
+# Create a virtual environment and activate it
+RUN python3 -m venv /workspace/venv
+ENV PATH="/workspace/venv/bin:$PATH"
 
 EXPOSE 8188
 
@@ -155,4 +159,4 @@ RUN cd /ComfyUI/custom_nodes && \
     pip3 install -r requirements.txt && \
     mkdir /ComfyUI/models/LLM
 
-CMD [ "/start.sh" ]
+CMD [ "/workspace/start.sh" ]
