added custom nodes

--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -195,4 +195,14 @@ RUN cd /ComfyUI/custom_nodes && \
     cd comfyui-mixlab-nodes && \
     pip3 install -r requirements.txt
 
+# comfyui-reactor-node
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/Gourieff/comfyui-reactor-node.git && \
+    cd comfyui-reactor-node && \
+    pip3 install -r requirements.txt
+
+# cg-use-everywhere
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/chrisgoringe/cg-use-everywhere.git
+
 CMD [ "/start.sh" ]
