--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -91,6 +91,7 @@ COPY --chmod=755 download_Florence-2.sh /download_Florence-2.sh
 COPY --chmod=755 download_Upscalers.sh /download_Upscalers.sh
 COPY --chmod=755 download_Outpainting.sh /download_Outpainting.sh
 COPY --chmod=755 download_Workflows.sh /download_Workflows.sh
+COPY --chmod=755 update_Workflows.sh /update_Workflows.sh
 COPY --chmod=755 download_ALL.sh /download_ALL.sh
 COPY --chmod=755 make_venv.sh /make_venv.sh
 
