Added pose2img workflow

--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -48,6 +48,7 @@ COPY --chmod=644 workflows/ /ComfyUI/pysssss-workflows/
 COPY --chmod=644 comfy.settings.json /ComfyUI/user/default/comfy.settings.json
 COPY --chmod=644 character_sheet_example.png /ComfyUI/input/character_sheet_example.png
 COPY --chmod=644 example_photo.png /ComfyUI/input/example_photo.png
+COPY --chmod=644 example_pose.png /ComfyUI/input/example_pose.png
 COPY --chmod=644 example2.png /ComfyUI/input/example2.png
 COPY --chmod=644 driving_video.mp4 /ComfyUI/input/driving_video.mp4
 
